[gd_scene load_steps=7 format=3 uid="uid://dgxvjw4lvm6el"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_ecubk"]
[ext_resource type="Texture2D" uid="uid://0o5uyppi055g" path="res://graphics/player/player.png" id="1_w4yb2"]
[ext_resource type="Texture2D" uid="uid://81i7k1kvwrgd" path="res://graphics/decals/white.png" id="3_yfjgx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bsc53"]
radius = 55.1453

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_agwsd"]
particle_flag_disable_z = true
spread = 15.0
initial_velocity_min = 500.0
initial_velocity_max = 1000.0
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.8
color = Color(0.541176, 1, 1, 1)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_cdwov"]
polygon = PackedVector2Array(48, -27, 60, -22, 73, -8, 82, -8, 88, -7, 95, -2, 107, 0, 111, 4, 120, 5, 121, 7, 121, 10, 126, 8, 131, 12, 132, 19, 131, 32, 126, 35, 122, 33, 120, 33, 119, 37, 120, 39, 114, 40, 109, 37, 106, 39, 103, 43, 96, 47, 94, 51, 92, 56, 85, 56, 67, 56, 57, 56, 56, 48, 58, 46, 59, 44, 51, 42, 41, 43, 28, 48, 21, 50, 8, 57, -6, 63, -24, 62, -35, 58, -38, 52, -40, 47, -44, 41, -45, 36, -49, 33, -51, 30, -53, 26, -53, 24, -55, 17, -56, 16, -58, 13, -59, 11, -62, 5, -61, -6, -63, -15, -61, -20, -60, -24, -57, -27, -56, -30, -55, -33, -54, -36, -51, -40, -50, -41, -45, -43, -44, -44, -38, -46, -35, -47, -33, -45, -30, -45, -27, -50, -20, -54, -16, -54, -13, -54, -5, -56, 8, -58, 14, -58, 24, -56, 29, -52, 36, -43, 43, -37, 44, -33)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_ecubk")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(35, 3)
rotation = 1.5708
texture = ExtResource("1_w4yb2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -3)
shape = SubResource("CircleShape2D_bsc53")
one_way_collision_margin = 1.2

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="GranadeReloadTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="LaserStartPositions" type="Node2D" parent="."]
position = Vector2(38, 3)
rotation = 1.5708

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(19, -93)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(27, -90)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(12, -90)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(132, 24)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_agwsd")
texture = ExtResource("3_yfjgx")
lifetime = 0.1
one_shot = true
explosiveness = 0.5

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_cdwov")

[connection signal="timeout" from="LaserTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GranadeReloadTimer" to="." method="_on_granade_reload_timer_timeout"]
